k8s-configs/ping-cloud/base/pingaccess/standalone/statefulset.yaml
# This defines the pingaccess deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess
spec:
  replicas: 1
  serviceName: pingaccess
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccount: ping-serviceaccount
      containers:
      - name: pingaccess
        # FIXME: switch to stable image before GA
        image: pingidentity/pingaccess:5.3.1-alpine-edge
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "1"
          limits:
            memory: "1.5Gi"
            cpu: "1"
        volumeMounts:
        # FIXME: fix home directory when containers run as non-root user
        - name: ssh-dir
          mountPath: /root/.ssh
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: pingaccess-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        readinessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        livenessProbe:
          exec:
            command: [ liveness.sh ]
          periodSeconds: 30
          failureThreshold: 10
        ports:
        - containerPort: 9000
        - containerPort: 3000
        - containerPort: 3030
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: pingaccess-init
        configMap:
          name: pingaccess-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingaccess-license
        secret:
          secretName: pingaccess-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-passwords
        secret:
          secretName: pingaccess-passwords
          optional: true
          defaultMode: 0400
