k8s-configs/ping-cloud/base/pingaccess/standalone/service.yaml
# This service exposes the pingaccess admin, runtime and agent ports to the
# cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess
spec:
  ports:
  - port: 9000
    name: pingaccess-admin
  - port: 443
    name: pingaccess-runtime
    targetPort: 3000
  - port: 3030
    name: pingaccess-agent
